# phaser

./: .gitignore  Cargo.toml  DESIGN.md  ENTRYPOINT.md  INSTRUCTIONS.md  PHASE0.md  PHASE1.md  PHASE2.md  PHASE3.md  README.md  SETUP.md  autonomous_session.sqlite  demo_memory.sqlite
.github/: README.md
.github/workflows/: ci.yml
demo/: README.md
docs/: README.md
edit/: README.md
hooks/: README.md
index/: README.md
llm/: README.md
mobile/: README.md
orchestrator/: README.md
prompt/: README.md
scripts/: README.md  benchmark_rag.py  start_dev_session.sh
src/: lib.rs  main.rs
src/edit/: patch.rs
src/hooks/: autotest.rs  mod.rs
src/index/: chunker.rs  embedder.rs  mod.rs  vector_store.rs
src/llm/: gemini_client.rs  mod.rs
src/orchestrator/: context.rs  memory.rs  mod.rs
src/utils/: git_client.rs  mod.rs
src/voice/: capture.rs  mod.rs  transcribe.rs
tests/: README.md  cli.rs  index.rs  llm.rs  mod.rs  test_context_builder.rs  voice.rs
utils/: README.md
voice/: README.md
