[package]
name = "project-x"
version = "0.1.0"
edition = "2021"
description = "AI-First Coding Assistant (Rust Edition)"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "project-x"
path = "src/main.rs"
